# PhysInteraction

./: README.md
InteractionReconstruction/InteractionReconstruction/: .gitignore  CMakeLists.txt  base_model.txt  time_performance.txt
InteractionReconstruction/InteractionReconstruction/apps/hmodel_atb/: CMakeLists.txt
InteractionReconstruction/InteractionReconstruction/cmake/: ConfigureBoost.cmake  ConfigureCUDA.cmake  ConfigureCeres.cmake  ConfigureCompiler.cmake  ConfigureCurl.cmake  ConfigureEigen.cmake  ConfigureFlann.cmake  ConfigureGLEW.cmake  ConfigureJsoncpp.cmake  ConfigureLibigl.cmake  ConfigurePCL.cmake  ConfigureQt.cmake  ConfigureRealSense.cmake  FindCeres.cmake  FindFlann.cmake  FindGLEW.cmake  FindGLM.cmake  FindJsoncpp.cmake  FindLibigl.cmake  FindNvToolsExt.cmake  FindOpenCV2.cmake  FindPCL.cmake  FindRealSense.cmake
InteractionReconstruction/InteractionReconstruction/cudax/: CMakeLists.txt  PixelIndexer.h  externs.h  kernel.cu  kernel.h  kernel_init.h  kernel_upload.h
InteractionReconstruction/InteractionReconstruction/cudax/functors/: ComputeJacobianDataPointCloud_ZH.h  ComputeJacobianInteraction.h  ComputeJacobianKeypoint2D.h  ComputeJacobianRow.h  ComputeJacobianSilhouette.h  CorrespondencesFinder.h
InteractionReconstruction/InteractionReconstruction/data/mano/: hand_keypoints.txt
InteractionReconstruction/InteractionReconstruction/json_manuscript/: IO_Parameters_online.json
InteractionReconstruction/InteractionReconstruction/physhand/: CMakeLists.txt  CeresSolver.h  CeresSovler.cpp  ContactPoints.cpp  ContactPoints.h  Defs.cpp  Defs.h  ForceSolver.cpp  ForceSolver.h  InertiaSolver.cpp  InertiaSolver.h  PhysHandSolver.cpp  PhysHandSolver.h  Utils.cpp  Utils.h
InteractionReconstruction/InteractionReconstruction/reconstruction/: CMakeLists.txt
InteractionReconstruction/InteractionReconstruction/spheremesh2mano/: CMakeLists.txt  Mesh.cpp  Mesh.h  ModelConvertor.cpp  ModelConvertor.h  Solver.cpp  Solver.h  arcball.cpp  arcball.h  manomodel.cpp  manomodel.h  vector_operations.hpp
InteractionReconstruction/InteractionReconstruction/tracker/: CMakeLists.txt  CommonVariances.h  Filter.cpp  Filter.h  ForwardDeclarations.h  GLWidget.cpp  GLWidget.h  Interaction.cpp  Interaction.h  PosePredict.cpp  PosePredict.h  Tracker.cpp  Tracker.h  Types.h  VarianceAssistance.cpp  VarianceAssistance.h  Worker.cpp  Worker.h
(+137 files in other folders)
